fix(e2e): use SDK default API endpoint (api-go.helix.tools)
- Removed explicit APIEndpoint from producer and consumer configs
- SDK default is api-go.helix.tools (Go API)
- Updated .gitignore to allow tracking e2e_main.go

--- a/.gitignore
+++ b/.gitignore
@@ -3,9 +3,9 @@ test/e2e-test
 test/*.exe
 test/*.test
 *.test
-test*
-test/*
-test
+
+# Allow e2e_main.go to be tracked
+!test/e2e_main.go
 
 # Environment files (credentials)
 .env
